# Lab0TheryGraphs

./: CMakeLists.txt  Tree.h  main.cpp
